# camera_controller

./: .gitignore  Camera.py  CameraController.py  CameraSettings  CameraSettings.py  CameraSettings.toml  CameraSystem.py  Dockerfile  PersonDetector.py  main.py  prueba_1.py  prueba_2.py  prueba_3.py  prueba_4.py  prueba_5.py  pyproject.toml
.github/workflows/: docker-image.yml
camera_server/: .gitignore
client/: index.html  package-lock.json  package.json
client/src/: App.js  index.js
client/src/api/: cameras.js
client/src/components/: AppSidebar.js  CameraOverview.js  CameraView.js  Cameras.js
client/src/pages/: CameraDetails.js  CameraOverview.js
server/: Camera.py  CameraController.py  CameraSystem.py  PersonDetector.py  app.py  main.py  pyproject.toml  requirements.txt  utility.py
server/camera_server/: __init__.py  config.toml  utilities.py
server/camera_server/api/: Camera.py  CameraController.py  CameraSystem.py  PersonDetector.py  __init__.py
server/camera_server/cameras/: CameraController.py  CameraSystem.py  __init__.py
src/: main.py
