[tool.poetry]
name = "server"
version = "0.1.0"
description = "Smart Factory Camera Server"
authors = ["Hiram Muñoz <hirammunozr@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0"
Flask = "^2.1.2"
numpy = "^1.22.4"
onvif-zeep = "^0.2.12"
python-dotenv = "^0.20.0"
matplotlib = "^3.5.2"
Pillow = "^9.1.1"
PyYAML = "^6.0"
requests = "^2.28.0"
torch = "^1.11.0"
torchvision = "^0.12.0"
tqdm = "^4.64.0"
tensorboard = "^2.9.1"
pandas = "^1.4.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
